<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!-- ══════════════════════════════════════════════════════
         PARENT — Spring Boot 3.2.x (quản lý BOM dependency)
    ══════════════════════════════════════════════════════ -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/>
	</parent>

	<!-- ══════════════════════════════════════════════════════
         PROJECT COORDINATES
    ══════════════════════════════════════════════════════ -->
	<groupId>com.linguanext</groupId>
	<artifactId>linguanext-backend</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>LinguaNext Backend</name>
	<description>AI-powered language learning platform — Spring Boot 3.2 / Java 21</description>

	<!-- ══════════════════════════════════════════════════════
         GLOBAL PROPERTIES
    ══════════════════════════════════════════════════════ -->
	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- versions ngoài spring-boot BOM -->
		<jjwt.version>0.12.5</jjwt.version>
		<springdoc.version>2.5.0</springdoc.version>
		<lombok.version>1.18.32</lombok.version>
		<testcontainers.version>1.19.8</testcontainers.version>
	</properties>

	<!-- ══════════════════════════════════════════════════════
         DEPENDENCIES
    ══════════════════════════════════════════════════════ -->
	<dependencies>

		<!-- ───────────────────────────────────────────────
             WEB
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<!-- Bao gồm: spring-webmvc, jackson-databind,
                          spring-boot-starter-tomcat, spring-boot-starter-json -->
		</dependency>

		<!-- Bean Validation (@Valid, @NotBlank, @Size, ...) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- ───────────────────────────────────────────────
             SECURITY
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- JWT — io.jsonwebtoken 0.12.x (JJWT) -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- ───────────────────────────────────────────────
             DATABASE — JPA + MySQL 8
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<!-- Bao gồm: hibernate-core, spring-data-jpa, HikariCP -->
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
			<!-- version được quản lý bởi spring-boot-dependencies BOM -->
		</dependency>

		<!-- ───────────────────────────────────────────────
             CACHE — Redis (Lettuce client)
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
			<!-- Bao gồm: spring-data-redis + lettuce-core -->
		</dependency>

		<!-- @Cacheable / @CacheEvict -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>

		<!-- ───────────────────────────────────────────────
             EMAIL — JavaMail / Jakarta Mail
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- ───────────────────────────────────────────────
             RETRY  (@Retryable — dùng cho OpenAI rate-limit)
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
			<!-- version quản lý bởi spring-boot BOM -->
		</dependency>

		<!-- AOP proxy cần thiết cho @Retryable -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
		</dependency>

		<!-- ───────────────────────────────────────────────
             SWAGGER / OpenAPI 3 — Springdoc
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.version}</version>
			<!-- Swagger UI: http://localhost:8080/swagger-ui.html -->
		</dependency>

		<!-- ───────────────────────────────────────────────
             ACTUATOR — health, metrics
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- ───────────────────────────────────────────────
             LOMBOK
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>

		<!-- ───────────────────────────────────────────────
             DEVTOOLS — hot reload (dev only)
        ─────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- ───────────────────────────────────────────────
             TEST
        ─────────────────────────────────────────────── -->

		<!-- spring-boot-starter-test:
               JUnit 5, Mockito, AssertJ, Spring Test, MockMvc -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Spring Security test helpers (@WithMockUser, ...) -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- H2 — in-memory database cho unit test (không cần Docker) -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Testcontainers — MySQL thật cho integration test -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mysql</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>spring-dotenv</artifactId>
			<version>4.0.0</version>
		</dependency>
		<!-- Google API Client — verify idToken -->
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.cloudinary</groupId>
			<artifactId>cloudinary-http44</artifactId>
			<version>1.33.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.firebase</groupId>
			<artifactId>firebase-admin</artifactId>
			<version>9.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>2.2.0</version>
		</dependency>
	</dependencies>

	<!-- ══════════════════════════════════════════════════════
         BUILD
    ══════════════════════════════════════════════════════ -->
	<build>
		<plugins>

			<!-- Spring Boot Maven Plugin — fat JAR / layered JAR -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<!-- Lombok annotation processor không cần trong runtime -->
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
					<!-- Bật layered JAR cho Docker image tối ưu -->
					<layers>
						<enabled>true</enabled>
					</layers>
				</configuration>
			</plugin>

			<!-- Maven Compiler — Java 21 + annotation processor Lombok -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<!-- Giữ tên parameter để Spring MVC binding hoạt động đúng -->
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Surefire — chạy unit test (mvn test) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<excludes>
						<!-- Integration test chạy riêng bằng Failsafe -->
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Failsafe — chạy integration test (mvn verify) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*IntegrationTest.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<!-- ══════════════════════════════════════════════════════
         PROFILES
    ══════════════════════════════════════════════════════ -->
	<profiles>

		<!-- dev: ddl-auto=update, log SQL, devtools bật -->
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
			</properties>
		</profile>

		<!-- prod: ddl-auto=validate, không log SQL, devtools tắt -->
		<profile>
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
			</properties>
		</profile>

		<!-- ci: H2 in-memory, bỏ Testcontainers nếu không có Docker -->
		<profile>
			<id>ci</id>
			<properties>
				<spring.profiles.active>test</spring.profiles.active>
			</properties>
		</profile>

	</profiles>

</project>
